# store/routes.js
@@ -25,7 +25,9 @@ import {
   modifyProvider,
   deleteProvider,
   userReport,
+  viewAllProvider,
 } from './controller';
+import { log } from 'util';
 
 const router = express.Router();
 
@@ -58,12 +60,20 @@ router.get('/provider', viewProvider, (req, res) =>
   res.status(200).json({ providers: req.providers }),
 );
 
+router.get('/provider/all', viewAllProvider, (req, res) => {
+  console.log(req.providers);
+
+  res.status(200).json({ providers: req.providers });
+});
+
 router.post('/provider', addProvider, (req, res) =>
   res.status(200).json({
     detail: `Provider id: ${req.provider} added successfully`,
     success: true,
   }),
 );
+
+// curl -X GET "http://localhost:3000/api/store/provider/all?group=id" -H "accept: application/json" -H "x-access-token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MiwibW9kZWwiOiJzdG9yZSIsImlhdCI6MTUzMTczODc4NCwiZXhwIjoxNTMxODI1MTg0fQ.iZFNFMDqnGfnbZKa3aiFHaLJQXXjBzo8SjL9dXZTP4U"
 
 router.patch('/provider/:id', modifyProvider, (req, res) => res.status(204).send());
 
